// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoverageChart coverage danger 1`] = `
<div
  class="undefined Component-root-0-1-1"
>
  <div
    class="Component-chart-0-1-3"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts1-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 Component-number-0-1-4 Component-number-0-1-6"
  >
    10
    %
  </div>
  <div
    class="h6 Component-title-0-1-2 Component-title-0-1-5"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart coverage success 1`] = `
<div
  class="undefined Component-root-0-1-1"
>
  <div
    class="Component-chart-0-1-3"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts5-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 Component-number-0-1-4 Component-number-0-1-10"
  >
    50
    %
  </div>
  <div
    class="h6 Component-title-0-1-2 Component-title-0-1-9"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart coverage warning 1`] = `
<div
  class="undefined Component-root-0-1-1"
>
  <div
    class="Component-chart-0-1-3"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts3-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 Component-number-0-1-4 Component-number-0-1-8"
  >
    30
    %
  </div>
  <div
    class="h6 Component-title-0-1-2 Component-title-0-1-7"
  >
    title
  </div>
</div>
`;

exports[`CoverageChart dark 1`] = `
<div
  class="undefined Component-root-0-1-1"
>
  <div
    class="Component-chart-0-1-3"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 80px; height: 80px;"
    >
      <svg
        class="recharts-surface"
        height="80"
        version="1.1"
        viewBox="0 0 80 80"
        width="80"
      >
        <defs>
          <clippath
            id="recharts7-clip"
          >
            <rect
              height="70"
              width="70"
              x="5"
              y="5"
            />
          </clippath>
        </defs>
        <g
          class="recharts-layer recharts-pie"
        >
          <g
            class="recharts-layer"
          >
            <g
              class="recharts-layer recharts-pie-sector"
            />
            <g
              class="recharts-layer recharts-pie-sector"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
  <div
    class="h3 Component-number-0-1-4 Component-number-0-1-12"
  >
    50
    %
  </div>
  <div
    class="h6 Component-title-0-1-2 Component-title-0-1-11"
  >
    title
  </div>
</div>
`;
